--- a/app/src/main/res/layout/slide_item.xml
+++ b/app/src/main/res/layout/slide_item.xml
@@ -39,19 +39,19 @@
         app:srcCompat="@drawable/gradient_bg" />
 
     <TextView
-        android:maxLines="2"
-        android:textSize="24sp"
-        android:textColor="#ffffff"
         android:id="@+id/slide_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
+        android:maxLines="2"
         android:text="TextView"
+        android:textColor="#ffffff"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/fab_slide" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
