--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -53,6 +54,12 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_gravity="center"
+                        android:id="@+id/profile_image"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
+                        android:scaleType="centerCrop"/>
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -69,7 +76,9 @@
                             android:layout_toRightOf="@+id/username_icon"
                             android:background="@android:color/transparent"
                             android:hint="Email"
-                            android:inputType="textEmailAddress"
+                            android:inputType="none"
+                            android:textIsSelectable="true"
+                            android:focusable="false"
                             android:maxLines="1"
                             android:paddingLeft="17dp"
                             android:paddingTop="15dp"
