--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,11 +28,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
                 app:cardBackgroundColor="#1C1B1B"
-                app:cardCornerRadius="50dp">
+                android:alpha="0.8"
+                app:cardCornerRadius="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -136,8 +136,9 @@
                     android:layout_height="125dp"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
+                    android:alpha="0.8"
                     app:cardBackgroundColor="#1C1B1B"
-                    app:cardElevation="10dp">
+                    app:cardCornerRadius="10dp">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -170,8 +171,9 @@
                     android:layout_height="125dp"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
+                    android:alpha="0.8"
                     app:cardBackgroundColor="#1C1B1B"
-                    app:cardElevation="10dp">
+                    app:cardCornerRadius="10dp">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
