--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_blue"
+    android:padding="10dp"
     tools:context=".ui.SearchActivity">
 
     <androidx.recyclerview.widget.RecyclerView
