--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -5,7 +5,7 @@
     android:layout_width="125dp"
     android:layout_height="wrap_content"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginBottom="16dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -15,6 +15,7 @@
             android:id="@+id/item_movie_img"
             android:layout_width="match_parent"
             android:layout_height="175dp"
+            android:layout_gravity="center"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +36,5 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_movie_img" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
