Done with MyList

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -86,14 +86,13 @@
             app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
             app:layout_constraintTop_toBottomOf="@+id/detail_movie_title" />
 
-        <ToggleButton
+        <Button
             android:id="@+id/btn_save_my_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="31dp"
             android:layout_marginTop="4dp"
-            android:textOff="Luu"
-            android:textOn="Huy Luu"
+            android:text="LUU"
             android:background="@drawable/my_btn_toggle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
